# bookstore_01

./: README.md  db.sqlite3  pyproject.toml
bookstore/: settings.py
